# a2l-poc

./: Cargo.toml  QUESTIONS.md  README.md
benches/: hsm_cl.rs
src/: bitcoin.rs  dleq.rs  dummy_hsm_cl.rs  ecdsa.rs  hsm_cl.rs  lib.rs  pedersen.rs  pointcheval_sanders.rs  puzzle_promise.rs  puzzle_solver.rs  receiver.rs  secp256k1.rs  sender.rs  serde.rs
src/puzzle_promise/: receiver.rs  sender.rs  tumbler.rs
src/puzzle_solver/: receiver.rs  sender.rs  tumbler.rs
src/secp256k1/: constants.rs  enc.rs  keypair.rs
tests/: a2l.rs  a2l_dry.rs  a2l_e2e.rs  dry.rs  e2e.rs  puzzle_promise.rs
tests/harness/: forward_next_message_to_inner.rs  forward_transition_to_inner.rs  mod.rs  run_happy_path.rs  run_refund.rs
