[package]
name = "a2l-poc"
version = "0.1.0"
authors = ["Lucas Soriano del Pino <l.soriano.del.pino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.23", features = ["rand"] }
anyhow = "1"
fehler = "1"
thiserror = "1"
miniscript = "0.12"
conquer-once = "0.2.0"
libsecp256k1 = "0.3.5"
rand = "0.7.3"
hex = "0.4.2"
sha2 = "0.8"

[dev-dependencies]
proptest = "0.9"
miniscript = { version = "0.12", features = ["compiler"] }
