[package]
name = "a2l"
version = "0.1.0"
authors = ["Lucas Soriano del Pino <l.soriano.del.pino@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.23", features = ["rand"] }
anyhow = "1"
fehler = "1"
thiserror = "1"
miniscript = { git = "https://github.com/coblox/rust-miniscript.git", branch = "witness-stack-order-wrong", features = ["compiler"] }
conquer-once = "0.2.0"
libsecp256k1 = "0.3.5"
rand = "0.7.3"
hex = "0.4.2"
sha2 = "0.8"
serde = "1"
derive_more = "0.99"

[dependencies.class_group]
git = "http://github.com/LLFourn/class"
rev = "7288388"

[dependencies.curv]
git = "https://github.com/KZen-networks/curv"
features =  ["ec_secp256k1"]
tag = "v0.2.3"

[dev-dependencies]
proptest = "0.9"
testcontainers = "0.9"
ureq = { version = "0.12", default-features = false, features = ["json"]}
serde_cbor = "0.11"
streaming-stats = "0.2.3"
itertools = "0.9"
